finished some more homework in the css section

--- a/2-CSS/homework/styled-about-page/hobbies.html
+++ b/2-CSS/homework/styled-about-page/hobbies.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hobbies</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <a href="index.html" style="text-decoration: none;">Home</a>
-    <a href="hobbies.html" style="text-decoration: none;">Hobbies</a>
-    <hr>
+    <div class="nav">
+        <a href="index.html" style="text-decoration: none;">Home</a>
+        <a href="hobbies.html" style="text-decoration: none;">Hobbies</a>
+    </div>
     <!-- If you still need more to do, make a page about some of your hobbies and activities. Include: -->
-    <h1>Awesome Hobby Page</h1>
+    <h1 class="title">Awesome Hobby Page</h1>
 
+    <div class="important-things">
     <!-- What is this hobby exactly? -->
     <p>Since learning more about tech, I love filling my day with learning Web Development technologies. However, I also love writing, reading and watching tv shows and movies. At the moment, I'm watching Sex and the City. I like watching different genres and finding a different story for every mood.</p>
 
@@ -25,8 +28,8 @@
     <!-- Photos and/or videos of your hobby in action -->
     <!-- I don't have any photos on this device -->
     <h3>Photo from Japan</h3>
-    <p>I did not take this photo</p>
-    <img src="japan.jpeg" alt="Photo of Japan">
+    <p>I did not take this photo.</p>
+    <img id="photo-japan" src="japan.jpeg" alt="Photo of Japan">
 
 
     <!-- Links to websites describing your hobby, or where hobbyists discuss what they do -->
@@ -35,5 +38,6 @@
         <li><a href="https://www.crunchyroll.com/" style="text-decoration: none;">Crunchyroll</a></li>
         <li><a href="https://www.reddit.com/r/anime/" style="text-decoration: none;">Anime subreddit</a></li>
     </ul>
+    </div>
 </body>
 </html>
