--- a/2-CSS/homework/styled-about-page/index.html
+++ b/2-CSS/homework/styled-about-page/index.html
@@ -5,38 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <a href="index.html" style="text-decoration: none;">Home</a>
-    <a href="hobbies.html" style="text-decoration: none;">Hobbies</a>
-    <hr>
-    <h1>About Page</h1>
-    <!-- A paragraph of information about who you are, where you live, and what you currently do for work -->
-    <p>I'm Sarah!<br> I live in the sunny south-east of Ireland. <br> I have an academic background in French and Advertising. However, recently I have been learning about Cloud Technologies and Web Development. And I am in love! ❤️ </p>
+    <div class="nav">
+        <a href="index.html" style="text-decoration: none;">Home</a>
+        <a href="hobbies.html" style="text-decoration: none;">Hobbies</a>
+    </div>
+    <h1 class="title">About Page</h1>
+    <div class="important-things">
+        <!-- A paragraph of information about who you are, where you live, and what you currently do for work -->
+        <p>I'm Sarah!<br> I live in the sunny south-east of Ireland. <br> I have an academic background in French and Advertising. However, recently I have been learning about Cloud Technologies and Web Development. And I am in love! ❤️ </p>
 
-    <!-- Another paragraph describing what you'd like to do in web design and development -->
-    <p>I've always been a creative individual who chesired solving problems. Web Design and Development offer me a creative outlet that stimulates and appeals to my being. I feel excited and fulfilled from studying and practicing new learnings.I'm so eager to keep on learning and discovering the vast array of languages and frameworks in the field!</p>
+        <!-- Another paragraph describing what you'd like to do in web design and development -->
+        <p>I've always been a creative individual who chesired solving problems. Web Design and Development offer me a creative outlet that stimulates and appeals to my being. I feel excited and fulfilled from studying and practicing new learnings.I'm so eager to keep on learning and discovering the vast array of languages and frameworks in the field!</p>
+    </div>
 
+    <div class="important-things">
     <!-- Make a list of three important things to know about you -->
-    <h3>Some important things to know about me</h3>
-    <ul>
-        <li>I don't want to decide if I prefer cats or dogs because I love both and feel bad deciding. Why is it such a divided topic?!</li>
-        <li>My favourite kind of tea is chamomile tea. It always make me feel better if I'm having a stressful day. If you're a tea drinker in general, I think we'll get on wonderfully!</li>
-        <li>I recently bought a fitness watch and am trying to get into running. I'm working up to a 5km run! Wish me luck!</li>
-    </ul>
+        <h3>Some important things to know about me</h3>
+        <ul>
+            <li>I don't want to decide if I prefer cats or dogs because I love both and feel bad deciding. Why is it such a divided topic?!</li>
+            <li>My favourite kind of tea is chamomile tea. It always make me feel better if I'm having a stressful day. If you're a tea drinker in general, I think we'll get on wonderfully!</li>
+            <li>I recently bought a fitness watch and am trying to get into running. I'm working up to a 5km run! Wish me luck!</li>
+        </ul>
+    </div>
 
+    <div class="important-things">
     <!-- Include a favorite quote, with citation for the person who said it -->
     <h3>A nice Quote</h3>
     <blockquote>
         Aim for the moon. If you miss, you may hit a star.
         <cite>W. Clement Stone</cite>
     </blockquote>
+    </div>
         
-
+    <div class="important-things">
     <!-- Include at least one picture of yourself -->
     <h3>Pic of my alter ego</h3>
     <img src="BLOSSOM_OF_POWERPUFF_GIRLS.png" alt="Blossom from Powerpuff Girls" style="height: 200px;">
+    </div>
 
+    <div class="important-things">
     <!-- Link to a website that you like to visit frequently -->
     <h3>My top 3 favourite websites</h3>
     <ol>
@@ -44,5 +54,6 @@
         <li><a href="https://nowtv.com" style="text-decoration: none;">Now TV</a></li>
         <li><a href="https://frontendmasters.com" style="text-decoration: none;">Frontend Masters</a></li>
     </ol>
+    </div>
 </body>
 </html>
