preparation for homework that I have to do

--- a/4-forms/begin/forms.html
+++ b/4-forms/begin/forms.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Alien Abduction Order Form</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 	<link href="css/forms.css" rel="stylesheet">
 </head>
 <body>
@@ -67,6 +69,7 @@
 		</section>
 		<aside>
 			<h3>Our Location</h3>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1411.15980742279!2d-93.2719153432898!3d44.977817979098184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87f63b92a9636401%3A0xf1a376ecca3304c0!2sMJG%20International!5e0!3m2!1sen!2sie!4v1620749263342!5m2!1sen!2sie" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 			<address>
 				Frontend Masters &middot;
 				60 South 6th Street &middot;
